[project]
name = "hloc"
version = "1.5.1"
requires-python = ">=3.6"
description = "Tools and baselines for visual localization and mapping."
authors = [{name="Paul-Edouard Sarlin"}]
readme = "README.md"
license = { file = "LICENSE" }
classifiers=[
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
urls={git='https://github.com/cvg/Hierarchical-Localization/'}
dependencies = [
    "torch (>=1.1)",
    "torchvision (>=0.3)",
    "numpy",
    "opencv-python",
    "tqdm",
    "matplotlib",
    "plotly",
    "scipy",
    "h5py",
    "pycolmap (>=0.6.0)",
    "kornia (>=0.6.11)",
    "gdown",
    "lightglue @ git+https://github.com/cvg/LightGlue"
]

[tool.poetry]
packages = [
    { include = 'hloc' },
    { include = "hloc/**/*.py" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

